apep_0445/v2/REPLICATION.md
# Replication Package: apep_0445

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `acs_broadband.rds`
- `acs_covariates.rds`
- `acs_tract_poverty.rds`
- `analysis_full.rds`
- `balance_tests.rds`
- `bw_info_sensitivity.rds`
- `bw_sensitivity.rds`
- `cluster_models.rds`
- `cov_adjusted_rdd_results.rds`
- `donut_rdd_results.rds`
- `dynamic_rdd.rds`
- `first_stage.rds`
- `first_stage_parametric.rds`
- `fuzzy_rdd_results.rds`
- `infrastructure_heterogeneity.rds`
- `kernel_sensitivity.rds`
- `local_randomization.rds`
- `lodes_tract_employment.rds`
- `main_rdd_results.rds`
- `mccrary_test.rds`
- `oz_designations_raw.rds`
- `oz_source_metadata.rds`
- `panel_lodes.rds`
- `panel_rdd.rds`
- `parametric_models.rds`
- `placebo_cutoffs.rds`
- `polynomial_sensitivity.rds`
- `rdd_sample.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `05_appendix_tables.R`
- `05_figures.R`
- `06_tables.R`
- `fuzzy_rdd.R`
- `gen_appendix_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
